edaInteractionLearning/force-app/main/default/objects/Interaction_Mapping__c/fields/Insert_Null__c.field-meta.xml
<CustomField>
    <fullName>Insert_Null__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for checkboxes to prevent unmapped checkboxes from being written over to false.</description>
    <inlineHelpText>Used for checkboxes to prevent unmapped checkboxes from being written over to false.</inlineHelpText>
    <label>Insert Null</label>
    <type>Checkbox</type>
</CustomField>