edaInteractionLearning/force-app/main/default/objects/Interaction_Mapping__c/fields/Skip_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Skip_Mapping__c</fullName>
    <description>Select the Interaction Sources that should ignore this mapping configuration. The values in this picklist should match the values in Interaction&apos;s &quot;Interaction Sources&quot; field.</description>
    <inlineHelpText>Select the Interaction Sources that should ignore this import configuration.</inlineHelpText>
    <label>Skip Mapping</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual Entry</fullName>
            </value>
            <value>
                <fullName>Purchase List</fullName>
            </value>
            <value>
                <fullName>Student Information System</fullName>
            </value>
            <value>
                <fullName>Webform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>