edaInteractionLearning/force-app/main/default/objects/Interaction_Mapping__c/fields/Target_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_API_Name__c</fullName>
    <description>The API name of the Target Object to map Interaction data to. When adding new values, ensure that you use the API name of the object.</description>
    <inlineHelpText>Select the Target Object to map Source Object data to.</inlineHelpText>
    <label>Target Object API Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CampaignMember</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>hed__Affiliation__c</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Interaction__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>