edaInteractionLearning/force-app/main/default/objects/Interaction_Mapping__c/listViews/Opportunity.listView-meta.xml
<ListView>
    <fullName>Opportunity</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Target_Object_API_Name__c</columns>
    <columns>Target_Field_API_Name__c</columns>
    <columns>Source_Field_API_Name__c</columns>
    <columns>Insert_Null__c</columns>
    <columns>Skip_Mapping__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Target_Object_API_Name__c</field>
        <operation>equals</operation>
        <value>Opportunity</value>
    </filters>
    <label>Opportunity</label>
</ListView>